[project]
name = "intertidal-elevation-gee"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "earthengine-api==1.7.30",
  "geemap==0.38.1",
  "eo-tides==0.10.4",
  "geopandas==1.1.3",
  "xarray==2026.4.0",
  "rioxarray==0.22.0",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "numpy>=1.26",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]
# LET OP: pyTMD NIET toevoegen — eo-tides pint die op <3.0.0 en regelt het zelf.
