[project]
name = "intertidal-elevation-pc"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "odc-stac>=0.5.2",
  "planetary-computer>=1.0.0",
  "pystac-client>=0.9.0",
  "dea-tools>=0.4.10",
  "dea-intertidal>=2.5.3",
  "eodatasets3==1.9.3",   # vastgepind: 1.9.5 trekt datacube>=1.9.13 binnen die
                          # rasterio>=1.4.4 forceert, conflict met dea-intertidal
  "eo-tides>=0.10.4",
  "geopandas>=1.1.3",
  "rioxarray>=0.18",
  "xarray>=2026.2",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "numpy>=1.26",
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
]
# LET OP: pyTMD NIET toevoegen — eo-tides regelt die. eodatasets3 MOET expliciet
# erin staan; dea-intertidal importeert het maar declareert het niet.
